--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -1,4 +1,4 @@
-@(id: Int, employeeForm: Form[Employee])(implicit msg: play.api.i18n.Messages)
+@(id: String, employeeForm: Form[Employee])(implicit msg: play.api.i18n.Messages)
 
 @import helper._
 
