Updated DAO of Employee table

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,11 +8,8 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
         
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-united", "bootstrap.min.css"))">
+        <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.css"))">
 		
-		@* Optional theme *@
-		@* <link rel="stylesheet" media="screen" href="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap", "bootstrap-theme.min.css"))"> *@
-        
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
         
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -43,6 +40,6 @@
 	    <script src="@routes.WebJarAssets.at(WebJarAssets.locate("jquery.min.js"))"></script>
 	    
 	    <!-- Latest compiled and minified JavaScript -->
-		<script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootswatch-united", "bootstrap.min.js"))"></script>
+		<script src="@routes.WebJarAssets.at(WebJarAssets.locate("bootstrap.min.js"))"></script>
     </body>
 </html>
