--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -1,22 +1,4 @@
-@(currentPage: Page[Employee], currentOrderBy: Int, currentFilter: String)(implicit flash: play.api.mvc.Flash, msg: play.api.i18n.Messages)
-
-@****************************************
-* Helper generating navigation links    *
-****************************************@
-@link(newPage: Int, newOrderBy: Option[Int] = None) = @{
-    routes.Application.list(newPage, newOrderBy.map { orderBy =>
-        if(orderBy == scala.math.abs(currentOrderBy)) -currentOrderBy else orderBy
-    }.getOrElse(currentOrderBy), currentFilter)
-}
-
-@**********************************
-* Helper generating table headers *
-***********************************@
-@header(orderBy: Int, title: String) = {
-    <th class="col@orderBy header @if(scala.math.abs(currentOrderBy) == orderBy) @{if(currentOrderBy < 0) "glyphicon glyphicon-chevron-down" else "glyphicon glyphicon-chevron-up"}">
-        <a href="@link(0, Some(orderBy))">@title</a>
-    </th>
-}
+@(employees: List[Employee])(implicit flash: play.api.mvc.Flash, msg: play.api.i18n.Messages)
 
 @main("playing-reactive-mongo") {
 
@@ -24,7 +6,7 @@
 	<div class="container">
 		<div class="page-header">
 			<h3>
-				@Messages("employee.list.title", currentPage.total) 
+				@Messages("employee.list.title", employees.size)
 			</h3>
 		</div>
 	
@@ -36,60 +18,28 @@
 		}
 
 		<div id="actions">
-	
-			@helper.form(action=routes.Application.list(), 'class -> "navbar-form navbar-left", 'role -> "search") {
-				<input type="search" id="searchbox" name="f" value="@currentFilter" placeholder="Filter by employee name...">
-				<input type="submit" id="searchsubmit" value="Filter by name" class="btn btn-primary btn-sm"> 
-			} 
-			<a class="btn btn-success btn-sm pull-right" id="add" href="@routes.Application.create()">Add a new employee</a>	
+			<a class="btn btn-success btn-sm pull-right" id="add" href="@routes.Application.create()">Add a new employee</a>
 		</div>
 
-		@Option(currentPage.items).filterNot(_.isEmpty).map { employees =>
+		@Option(employees).filterNot(_.isEmpty).map { employeeList =>
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						@header(2, "Name")
-					 	@header(3, "Address") 
-						@header(6, "Designation")
+						<th>Name</th>
+						<th>Address</th>
+						<th>Designation</th>
 					</tr>
 				</thead>
 				<tbody>
-		
-					@employees.map { employee =>
+					@employeeList.map { employee =>
 					<tr>
 						<td><a href="@routes.Application.edit(employee.id)">@employee.name</a></td>
 						<td>@employee.address</td>
 						<td>@employee.designation</td>
 					</tr>
 					}
-		
 				</tbody>
 			</table>
-			<hr/>
-			
-            <ul class="pager" style="padding-bottom: 70px;">
-                @currentPage.prev.map { page =>
-                    <li class="previous">
-                        <a href="@link(page)">&larr; Previous</a>
-                    </li> 
-                }.getOrElse {
-                    <li class="previous disabled">
-                        <a>&larr; Previous</a>
-                    </li>
-                }
-                <li class="current">
-                    <a>Displaying @(currentPage.offset + 1) to @(currentPage.offset + employees.size) of @currentPage.total</a>
-                </li>
-                @currentPage.next.map { page =>
-                    <li class="next">
-                        <a href="@link(page)">Next &rarr;</a>
-                    </li> 
-                }.getOrElse {
-                    <li class="next disabled">
-                        <a>Next &rarr;</a>
-                    </li>
-                }
-            </ul>
 		}.getOrElse {
 			<div class="panel panel-default">
 			  <div class="panel-body">
