--- a/app/views/editForm.scala.html
+++ b/app/views/editForm.scala.html
@@ -4,7 +4,7 @@
 
 @implicitFieldConstructor = @{ FieldConstructor(twitterBootstrapInput.f) }
 
-@main("Employee-Self-Service") {
+@main("Playing-RethinkDB") {
     
     <!-- Begin page content -->
 	<div class="container">
