--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Play with Anorm") {
+@main("Playing-RethinkDB") {
 
     <!-- Begin page content -->
     <div class="container">
