--- a/app/views/list.scala.html
+++ b/app/views/list.scala.html
@@ -1,12 +1,13 @@
 @(employees: List[Employee])(implicit flash: play.api.mvc.Flash, msg: play.api.i18n.Messages)
 
-@main("playing-reactive-mongo") {
+@main("Playing-RethinkDB") {
 
 	<!-- Begin page content -->
 	<div class="container">
 		<div class="page-header">
 			<h3>
 				@Messages("employee.list.title", employees.size)
+				<a class="btn btn-success btn-sm pull-right" id="add" href="@routes.Application.create()">Add a new employee</a>
 			</h3>
 		</div>
 	
@@ -18,11 +19,12 @@
 		}
 
 		<div id="actions">
-			<a class="btn btn-success btn-sm pull-right" id="add" href="@routes.Application.create()">Add a new employee</a>
+			<input type="text" class="form-control input-sm m-b-xs" id="filter"  placeholder="Search in table">
 		</div>
+		<hr>
 
 		@Option(employees).filterNot(_.isEmpty).map { employeeList =>
-			<table class="table table-striped">
+			<table class="footable table table-striped" data-filter="#filter" data-page-size="10">
 				<thead>
 					<tr>
 						<th>Name</th>
