--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -6,7 +6,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="@routes.Application.index()">playing-reactive-mongo</a>
+			<a class="navbar-brand" href="@routes.Application.index()">Playing-RethinkDB</a>
 		</div>
 	</div>
 </div>
